tdf#133142 UnoControlTabPageContainer: Handle tab property changes

In the model, changing a tab page's title or enabled/disabled
status is done via methods 'XTabPageModel.setTitle' and
'XTabPageModel.setEnabled'.

Changes to the title and enabled/disabled status are
propagated to the tab page container containing the
tab page (s.a. 25c692c2a94ab83c2c859ac5ab334b62ac8b825e
("ControlModelContainerBase: Use property for enabled status",
2020-05-15)).

Make 'VCLXTabPageContainer' derive from 'XPropertiesChangeListener'
and implement the 'propertiesChange' method defined in that
interface to handle property changes for the tab pages and have
'UnoControlTabPageContainer' forward 'PropertyChangeEvent's
to its peer so they can be handled there.

This way, changes for those tab page properties via UNO
are now properly updated in the UI as well.

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94402
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 92289c5f121499959b6f5edf859e5f34b5b96a78)

 Conflicts:
	toolkit/inc/awt/vclxtabpagecontainer.hxx
	toolkit/inc/controls/tabpagecontainer.hxx

Change-Id: I6fa1fadf781575c4ad1d066aed9c3a651b10869d